<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps</string>
    <string name="spotify_streamer_title">Spotify Streamer</string>
    <string name="spotify_streamer_toast_body">This will launch my Spotify Streamer app</string>
    <string name="scores_title">Football Scores App</string>
    <string name="scores_toast_body">This will launch my Football Scores app</string>
    <string name="library_title">Library App</string>
    <string name="library_toast_body">This will launch my Library app</string>
    <string name="build_it_bigger_title">Build It Bigger</string>
    <string name="build_it_bigger_toast_body">This will launch my Built it bigger app</string>
    <string name="bacon_reader_title">XYZ Reader</string>
    <string name="bacon_reader_toast_body">This will launch my XYZ Reader app</string>
    <string name="capstone_title">Capstone</string>
    <string name="capstone_toast_body">This will launch my Capstone app</string>
</resources>
