<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/title_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_title"
        android:id="@+id/spotify_button"
        android:layout_below="@+id/title_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/orange_button"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_title"
        android:id="@+id/scores_button"
        android:layout_below="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/orange_button"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_title"
        android:id="@+id/library_button"
        android:layout_below="@+id/scores_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/orange_button"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_title"
        android:id="@+id/build_it_button"
        android:layout_below="@+id/library_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/orange_button"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader_title"
        android:id="@+id/bacon_button"
        android:layout_below="@+id/build_it_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/orange_button"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_title"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/bacon_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/red_button"/>
</RelativeLayout>
